# eql-alerts

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: windows-build.yml
assets/overlay/: README.md  map.json  tokens.css
public/icons/classes/: SOURCE.txt
public/icons/overlay/: map.json
samples/: eql_permanent_buffs.json  eql_starter.triggers.json  eqlog_Sample_legends.txt  gina_pack.triggers.json
scripts/: build_eql_speak.sh  build_macos_dmg.sh  eql_compat.py  import_gina_gtp.py  pack_kokoro_windows.ps1  rebuild_eql_starter.py  setup_kokoro.bat  setup_kokoro.sh
src/: App.css  App.tsx  Overlay.css  Overlay.tsx  QuickStart.tsx  main.tsx  overlay-main.tsx  overlayIcons.ts  speech.ts  time.ts  updates.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/binaries/: eql-speak  eql-speak.swift
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  engine.rs  eql_compat.rs  gina_import.rs  kokoro.rs  lib.rs  log_find.rs  log_tail.rs  main.rs  settings.rs  starter.rs  tts.rs
tts-kokoro/: main.py  pyproject.toml  speak.py
